Fix status indicator line wrap

--- a/app/client/templates/application/layout.css
+++ b/app/client/templates/application/layout.css
@@ -55,3 +55,7 @@ a, button, .btn {
 .pre-wrap {
   white-space: pre-wrap;
 }
+
+.inline {
+  display: inline;
+}
